# voiage

./: .coverage  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .vale.ini  AGENTS.md  BIBLIOGRAPHY_VALIDATION_REPORT.md  BRANCH_ARCHITECTURE.md  CELEBRATION_COMPLETE.md  CELEBRATORY_COMPLETION_MESSAGE.md  CERTIFICATE_OF_COMPLETION.md  CHANGELOG_CLI.md  CHANGES_SUMMARY.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETE_TRANSFORMATION_SUMMARY.md  COMPLETION_CERTIFICATE_FINAL.md  COMPLETION_SUMMARY_WITH_FAULTHANDLER.md  COMPREHENSIVE_METHODS_DOCUMENTATION_SUMMARY.md  COMPREHENSIVE_SUMMARY.md  CONDA_FORGE_SUMMARY.md  CONTRIBUTING.md  COVERAGE_ACHIEVEMENT_FINAL.md  COVERAGE_ACHIEVEMENT_REPORT.md  COVERAGE_IMPROVEMENT_MISSION_FINAL_REPORT.md  DOCKER_DEPLOYMENT.md  DOCKER_SUMMARY.md  DOCUMENTATION_DEPLOYMENT_VERIFICATION.md  Dockerfile  Dockerfile.cli  Dockerfile.jupyter  FILES_CREATED_MODIFIED_SUMMARY.md  FINAL_ACCOMPLISHMENTS_SUMMARY.md  FINAL_ACHIEVEMENT_SUMMARY.md  FINAL_CELEBRATORY_SUMMARY.md  FINAL_COMPLETION_CERTIFICATE.md  FINAL_COMPLETION_CERTIFICATION.md  FINAL_COMPLETION_CONFIRMATION.md  (+172 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  coverage-policy.json  dependabot.yml
benchmarks/: benchmark.py  c15_performance_baseline.json  results.txt
bindings/rust/: Cargo.toml  README.md
bindings/rust/benches/: README.md  evsi_stochastic_baseline.json  evsi_stochastic_baseline.rs  memory_throughput_baseline.json  memory_throughput_baseline.rs  scalar_cpu_baseline.json  scalar_cpu_baseline.rs
bindings/rust/src/: domain.rs  lib.rs  partial.rs  partial_information.rs  sample_information.rs  sample_information_stochastic.rs  scalar.rs
bindings/rust/tests/: deterministic_scalar_methods.rs  domain_roundtrip.rs  evsi_stochastic_kernel.rs  partial_information.rs  sample_information.rs  summary_methods.rs
bindings/rust/tests/fixtures/: evsi_stochastic_kernel.expected.json  evsi_stochastic_kernel.input.json
conda/: meta.yaml
conda-recipe/: README.md  conda_build_config.yaml  meta.yaml
conductor/: design.md  github-cross-references.json  index.md  product-guidelines.md  product.md  requirements.md  tech-stack.md  tracks.md  v1-programme-baseline.json  vcs.md  workflow.md
docs/: FINAL_TEST_COVERAGE_STATUS.md  IMPLEMENTATION_COMPLETION_REPORT.md  METHODS_AND_FORMULAE.md  METHODS_IMPLEMENTATION_SUMMARY.md  TEST_COVERAGE_IMPROVEMENT_REPORT.md  __init__.py  backends.rst  changelog.rst  ci_cd_quality_gates.md  cli_reference.rst  cli_usage.md  conf.py  contributing.rst  cross_domain_usage.md  cross_domain_usage.rst  data_structures.rst  dataset-registry.rst  faq.md  getting_started.rst  index.rst  installation.rst  introduction.rst  make.bat  metamodeling.md  metamodeling.rst  registry-readiness.md  sota_voi_frontier.md  validation_comparison_report.md  validation_results.md
examples/: README.md  adaptive_validation.ipynb  adaptive_validation_example.py  advanced_methods.ipynb  business_strategy_example.py  calibration_validation.ipynb  calibration_validation_example.py  cli_example.py  colab_accelerator_validation.ipynb  engineering_voi.ipynb  environmental_policy_example.py  environmental_voi.ipynb  evpi_validation.ipynb  evppi_validation.ipynb  evsi_validation.ipynb  financial_voi.ipynb  fluent_api_example.ipynb  getting_started.ipynb  interactive_tutorial.ipynb  jax_performance.ipynb  metamodeling_example.py  metamodeling_validation.ipynb  metamodeling_validation.nbconvert.ipynb  nma_validation.ipynb  nma_validation_example.py  observational_validation.ipynb  observational_validation_example.py  portfolio_validation.ipynb  structural_voi_validation.ipynb  validation_benchmarking.ipynb  validation_benchmarking.nbconvert.ipynb  visualization_gallery.ipynb  voiage_validation.ipynb  (+1 more)
rust/: Cargo.toml  deny.toml
rust/crates/voiage-diagnostics/: Cargo.toml  README.md
rust/crates/voiage-diagnostics/src/: contracts.rs  domain_mapping.rs  lib.rs
rust/crates/voiage-diagnostics/tests/: contracts.rs
rust/crates/voiage-domain/: Cargo.toml  README.md
rust/crates/voiage-domain/src/: collections.rs  core_contracts.rs  decision_problem.rs  lib.rs
rust/crates/voiage-domain/tests/: collections.rs  core_contracts.rs  decision_problem.rs  primitives.rs
rust/crates/voiage-ffi/: Cargo.toml
rust/crates/voiage-ffi/include/: voiage_v1.h
rust/crates/voiage-ffi/src/: error_transport.rs  lib.rs  lifecycle.rs  status.rs
rust/crates/voiage-ffi/tests/: abi_infrastructure.rs  error_transport.rs  lifecycle.rs
rust/crates/voiage-numerics/: Cargo.toml  README.md
rust/crates/voiage-numerics/benches/: foundational-baseline.json  foundational.rs
rust/crates/voiage-numerics/src/: ceaf.rs  dominance.rs  enbs.rs  error.rs  evpi.rs  evppi.rs  evsi.rs  evsi_efficient.rs  evsi_moment.rs  evsi_normal_normal.rs  evsi_regression.rs  expected_loss.rs  heterogeneity.rs  lib.rs  net_benefit.rs  structural.rs
rust/crates/voiage-numerics/tests/: ceaf.rs  ceaf_properties.rs  dominance.rs  dominance_properties.rs  evppi.rs  evppi_properties.rs  evsi.rs  evsi_differential.rs  evsi_efficient.rs  evsi_fuzz.rs  evsi_invalid_inputs.rs  evsi_metamorphic.rs  evsi_moment.rs  evsi_moment_interactions.rs  evsi_normal_normal.rs  evsi_properties.rs  evsi_regression.rs  evsi_thread_safety.rs  expected_loss.rs  expected_loss_properties.rs  foundational_kernels.rs  foundational_properties.rs  net_benefit.rs
rust/crates/voiage-python/: Cargo.toml  build.rs
rust/crates/voiage-python/src/: lib.rs
rust/crates/voiage-python/tests/: build_provenance.rs
rust/crates/voiage-serialization/: Cargo.toml  README.md
rust/crates/voiage-serialization/src/: error_mapping.rs  lib.rs
rust/crates/voiage-serialization/tests/: v1_results.rs
rust/crates/voiage-test-support/: Cargo.toml
rust/crates/voiage-test-support/src/: compatibility_contract.rs  lib.rs
rust/crates/voiage-test-support/tests/: compatibility_contract_parity.rs
rust/crates/voiage-wasm/: Cargo.toml
rust/crates/voiage-wasm/src/: lib.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: stable_evpi.rs
(+2723 files in other folders)
