# pyproject.toml for voiage

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiage"
version = "0.2.0" # Target version for this phase
description = "A Python library for Value of Information analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "voiage Contributors", email = "voiage@users.noreply.github.com" },
]
keywords = [
    "voi", "value of information", "evpi", "evppi", "evsi", "enbs",
    "decision analysis", "health economics", "uncertainty quantification",
    "bayesian analysis", "cost-effectiveness"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "defusedxml>=0.7",
    "numpy>=1.20,<2.0; python_version<'3.11'",
    "numpy>=2.2.6,<3.0; python_version>='3.11'",
    "scipy>=1.7,<1.15; python_version<'3.11'",
    "scipy>=1.16.3,<1.17; python_version>='3.11'",
    "pandas>=1.3,<3.0",
    "xarray>=0.19,<2025.0",
    "numpyro>=0.14,<0.20; python_version<'3.11'",
    "numpyro>=0.21.0,<0.22; python_version>='3.11'",
    "jax>=0.4.33,<0.6; python_version<'3.11'",
    "jax>=0.7.1,<0.8; python_version>='3.11'",
    "scikit-learn>=1.0,<2.0",
    "statsmodels>=0.13,<1.0",
    "matplotlib>=3.4,<4.0",
    "seaborn>=0.11,<1.0",
    "psutil>=5.9,<8.0",
    "typing_extensions>=4.0",
    "typer>=0.9,<1.0",
]

[project.optional-dependencies]
ci = [
    "docutils>=0.18,<0.22",
    "hypothesis>=6.0,<7.0",
    "jsonschema>=4.0,<5.0",
    "pytest>=9.0.3,<10.0",
    "pytest-benchmark>=4.0,<6.0",
    "pytest-cov>=7.1.0,<8.0",
    "pytest-integration>=0.2,<0.3",
    "pytest-xdist>=3.0,<4.0",
    "tomli>=2.0,<3.0",
]
dev = [
    "mutmut>=2.0,<3.0",
    "scalene>=1.5,<2.0",
    "ruff>=0.9.0,<1.0",
    "bandit>=1.7,<2.0",
    "nox>=2026.4.10,<2027",
    "ty>=0.0.1,<1.0",
    "types-setuptools",
    "types-requests",
    "sphinx>=7.0,<8.0",
    "sphinx-rtd-theme>=3.1.0,<4.0",
    "sphinx-autodoc-typehints>=1.12,<2.0",
    "jupyterlab>=3.0,<5.0",
    "ipykernel",
    "pre-commit>=4.6.0,<5.0",
    "vulture>=2.0,<3.0",
    "tox>=4.2,<5.0",
    "taskipy>=1.0,<2.0",
    "tomli>=2.0,<3.0",
]
plotting = ["matplotlib>=3.4", "seaborn>=0.11"]
deep_learning = ["torch>=1.9,<3.0"]

[project.urls]
Homepage = "https://github.com/edithatogo/voiage"
Documentation = "https://edithatogo.github.io/voiage"
Repository = "https://github.com/edithatogo/voiage"
Changelog = "https://github.com/edithatogo/voiage/blob/main/changelog.md"
Issues = "https://github.com/edithatogo/voiage/issues"

[project.scripts]
voiage = "voiage.cli:app"

# --- Tool Configurations ---

[tool.setuptools.packages.find]
where = ["."]
include = ["voiage*"]
exclude = ["tests*"]

[tool.ruff]
target-version = "py310"
exclude = [
    "examples/",
]
# line-length = 88 # This is also a global setting, default is 88

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "C90", "N", "D", "ANN", "S", "B", "A", "PT", "RUF",
    "SIM", "C4", "RET", "SLF", "TRY", "RUF022", "RUF023", "PL", "FURB",
    "UP", "YTT", "ASYNC", "TCH", "PYI", "Q", "FA", "PERF"
]
ignore = [
    # Allowed: Any type is sometimes necessary for public APIs
    "ANN401",
    # DEFERRED → v1.1: Full type annotation coverage (563 manual fixes needed)
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204",
    # Line length handled by formatter
    "E501",
    # Assert statements needed in tests
    "S101",
    # Complexity limits - too strict for existing codebase
    "C901", "PLR0913", "PLR0912", "PLR0915",
    # Exception message handling - stylistic
    "TRY003", "EM101", "EM102",
    # TODO/FIXME comments are useful
    "FIX002", "TD002", "TD003",
    # Private member access - internal module design choice
    "SLF001",
    # Magic value comparisons - stylistic, would require constants everywhere
    "PLR2004",
    # Import outside top-level - sometimes necessary for optional deps
    "PLC0415",
    # Variable naming in tests - non-lowercase common in pytest
    "N806",
]
per-file-ignores = { "tests/**/*.py" = [
    "B017",
    "D",
    "PT011",
    "PLW1510",
    "RUF043",
    "S110",
    "S603",
    "SIM105",
    "SIM117",
] }
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["voiage"]
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=voiage --cov-report=term-missing --cov-report=xml --cov-report=html --cov-fail-under=90"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests (deselect with '-m \"not e2e\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmark tests"
]

[tool.coverage.run]
source = ["voiage"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mutmut]
paths_to_mutate = "voiage/"
tests_dir = "tests/"
runner = "pytest -x --no-cov"
fail_under = 90

[tool.semantic_release]
version_variables = ["pyproject.toml:project.version"]
version_source = "tag"
upload_to_pypi = true
upload_to_release = true
commit_message = "chore(release): {version} [skip ci]"
commit_author = "github-actions[bot] <actions@github.com>"
branch = "main"
changelog_file = "changelog.md"

[tool.taskipy.tasks]
test = "uv run pytest tests/ -m 'not integration and not e2e and not benchmark' --cov=voiage --cov-report=term-missing"
test-integration = "uv run pytest tests/ -m 'integration' --no-cov"
test-e2e = "uv run pytest tests/ -m 'e2e' --no-cov"
test-all = "uv run pytest tests/ --cov=voiage --cov-report=term-missing --cov-report=html"
frontier-contract = "uv run python scripts/validate_frontier_contract.py"
lint = "tox -e lint"
format = "uv run ruff format voiage tests"
typecheck = "tox -e typecheck"
security = "uv run ruff check voiage --select=S --ignore=S101"
harness = "python scripts/repo_harness.py"
profile = "uv run scalene --cli profile_scalene.py"
mutmut = "uv run mutmut run --paths-to-mutate voiage/"
benchmark = "uv run pytest tests/ -m 'benchmark' --benchmark-only --no-cov"
docs = "uv run sphinx-build -b html docs docs/_build/html"
precommit = "uv run pre-commit run --all-files"
check = "tox"
nox = "uv run nox"
build = "uv build"
publish-test = "uv publish --publish-url https://test.pypi.org/legacy/"
publish = "uv publish"
conda-build = "conda-build conda/ --python 3.11"
refresh-registry-audit = "python scripts/refresh_binding_registry_audit.py"
