# Basic setup.cfg for pyVOI
# This file will configure linting, testing, and coverage.
# Specific configurations will be added based on project guidelines.

[metadata]
# Name and version are managed in pyproject.toml
# license_file = LICENSE # If you have a separate LICENSE file text

[options]
packages = find:
python_requires = >=3.8
# install_requires = # Managed in pyproject.toml

[options.packages.find]
where = .

[flake8]
# Basic flake8 configuration
# https://flake8.pycqa.org/en/latest/user/configuration.html
max-line-length = 88
extend-ignore = E203  # Whitespace before ':' - conflicts with black
# exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[pytest]
# Basic pytest configuration
# https://docs.pytest.org/en/latest/reference/customize.html
# testpaths = tests
# python_files = test_*.py
# addopts = --cov=pyvoi --cov-report=term-missing --cov-report=xml

[coverage:run]
# Basic coverage configuration
# https://coverage.readthedocs.io/en/latest/config.html
# source = pyvoi
# omit =
#   pyvoi/__main__.py
#   */__init__.py
#   */cli.py # Example: if CLI is not core logic to test initially

[coverage:report]
# fail_under = 80 # Example: enforce a minimum coverage
show_missing = True
skip_covered = True

[mypy]
# Basic mypy configuration
# https://mypy.readthedocs.io/en/stable/config_file.html
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
# plugins = numpy.typing.mypy_plugin # If using numpy stubs heavily

# Per-module settings if needed:
# [mypy-pyvoi.core.*]
# strict_optional = True

# [mypy-tests.*]
# ignore_errors = True # Or more granular control

[isort]
# Basic isort configuration
# https://pycqa.github.io/isort/docs/configuration/config_files/
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
