# setup.cfg for pyVOI

[metadata]
# Most metadata is now in pyproject.toml as per PEP 621.
# This file can still be used for some tool configurations if not supported
# directly in pyproject.toml by the specific tool, or for older tools.
# name, version, license, author, etc. -> pyproject.toml [project]
# description, long_description -> pyproject.toml [project] and README.md
# url, download_url, project_urls -> pyproject.toml [project.urls]
# keywords, classifiers -> pyproject.toml [project]

[options]
# packages, python_requires, install_requires -> pyproject.toml [project]
# package_dir -> pyproject.toml [tool.setuptools.package-dir] (if needed, usually not for src-layout or flat-layout)
packages = find:
# find: directive will use [tool.setuptools.packages.find] in pyproject.toml

[options.extras_require]
# extras_require -> pyproject.toml [project.optional-dependencies]
# Example:
# dev =
#   pytest>=7.0
#   ruff
# plotting =
#   matplotlib

[options.entry_points]
# entry_points -> pyproject.toml [project.scripts] or [project.gui-scripts] or [project.entry-points]
# Example for console scripts:
# console_scripts =
#   pyvoi-cli = pyvoi.cli:app # Assuming Typer app in cli.py

# --- Tool Configurations ---
# Some tools might still prefer setup.cfg, or for compatibility.
# However, modern practice is to move these to pyproject.toml if supported by the tool.

# Pytest configuration (can also be in pyproject.toml [tool.pytest.ini_options] or pytest.ini)
[pytest]
minversion = 6.0
# addopts, testpaths, python_files are now in pyproject.toml [tool.pytest.ini_options]
# Example:
# addopts = -ra -q --cov=pyvoi --cov-report=term-missing --cov-report=xml
# testpaths = tests
# python_files = test_*.py

# Coverage.py configuration (can also be in pyproject.toml [tool.coverage.run/report] or .coveragerc)
[coverage:run]
source = pyvoi
# omit =  # List files/patterns to exclude from coverage, e.g.
#   pyvoi/__main__.py
#   pyvoi/cli.py
#   pyvoi/plot/*
#   */__init__.py
#   tests/* # Usually tests are not part of source coverage measurement
#   docs/*

[coverage:report]
# fail_under = 80 # Enforce minimum coverage - now in pyproject.toml addopts for pytest-cov
show_missing = True
skip_covered = True # Skip files that are 100% covered in the report for brevity

[coverage:html]
directory = coverage_html_report

# MyPy configuration is primarily in pyproject.toml [tool.mypy]
# [mypy]
# python_version = 3.8
# ... (most MyPy settings are better in pyproject.toml now)

# Bandit configuration (can also be in pyproject.toml [tool.bandit] or .bandit)
# [bandit]
# skips = B101 # Example
# tests = # Example: tests/*

# Flake8, isort, black are replaced by Ruff, configured in pyproject.toml [tool.ruff]
# [flake8]
# ... (obsolete if using Ruff)

# [isort]
# ... (obsolete if using Ruff)

# [tool:black] or [black]
# ... (obsolete if using Ruff)

# Tox configuration is usually in tox.ini, but some parts can be in pyproject.toml
# For now, assume tox.ini is separate.

# Pylint configuration (if used, though Ruff covers much of its scope)
# [pylint]
# ...

# Notes:
# - For a project primarily configured with pyproject.toml (PEP 621), setup.cfg
#   becomes less critical for package metadata and build options.
# - Its main remaining use is for tools that haven't fully adopted pyproject.toml
#   for their configuration, or for users who prefer its INI format for certain tools.
# - We are centralizing pytest and coverage config in pyproject.toml,
#   so their sections here are mostly for reference or older setups.
# - Ruff handles linting/formatting, so flake8/black/isort configs are removed.
# - MyPy and Bandit are also configured in pyproject.toml.
# - This setup.cfg is therefore quite minimal.
# - Ensure that if a tool is configured in pyproject.toml, its configuration
#   is not duplicated or conflicting here. Generally, pyproject.toml takes precedence
#   for tools that support it.

[bdist_wheel]
# This section is relevant if you're building wheels directly with setup.py bdist_wheel
# However, with PEP 517, build tools (like `pip install .` or `python -m build`)
# handle this, using settings from pyproject.toml.
# universal = 0 # Setting to 0 means Python-specific wheel (not universal)
# This is generally the default for modern packages with Python version constraints.
# If your package was pure Python and compatible with both Python 2 and 3 (legacy),
# you might have set universal = 1. For pyVOI (Python 3.8+), this is not applicable.
