[workspace]
members = [
    "crates/voiage-diagnostics",
    "crates/voiage-domain",
    "crates/voiage-ffi",
    "crates/voiage-numerics",
    "crates/voiage-python",
    "crates/voiage-serialization",
    "crates/voiage-test-support",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/edithatogo/voiage"

[workspace.dependencies]
voiage-diagnostics = { version = "=2.0.0", path = "crates/voiage-diagnostics" }
voiage-domain = { version = "=2.0.0", path = "crates/voiage-domain" }
voiage-numerics = { version = "=2.0.0", path = "crates/voiage-numerics" }
voiage-serialization = { version = "=2.0.0", path = "crates/voiage-serialization" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
