[package]
name = "voiage-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
voiage-domain = { path = "../crates/voiage-domain" }
voiage-numerics = { path = "../crates/voiage-numerics" }

[[bin]]
name = "stable_evpi"
path = "fuzz_targets/stable_evpi.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
