[package]
name = "voiage-domain"
description = "Validated, binding-independent domain contracts for voiage."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.7"
serde_json = "1.0"
