[package]
name = "voiage-ffi"
description = "Leaf C ABI adapter for the voiage Rust core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
voiage-diagnostics.workspace = true
voiage-domain.workspace = true
voiage-numerics.workspace = true
voiage-serialization.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
