[package]
name = "voiage-python"
description = "Private PyO3 adapter for the voiage Rust core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py310"] }
serde = "1"
serde_json = "1"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10"
voiage-diagnostics.workspace = true
voiage-domain.workspace = true
voiage-numerics.workspace = true
voiage-serialization.workspace = true

[build-dependencies]
sha2 = "0.10"

[lints]
workspace = true
