[package]
name = "voiage-wasm"
description = "Leaf WebAssembly adapter for the voiage Rust core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
voiage-diagnostics.workspace = true
voiage-domain.workspace = true
voiage-numerics.workspace = true
voiage-serialization.workspace = true
wasm-bindgen.workspace = true

[lints]
workspace = true
